--- a/index.html
+++ b/index.html
@@ -11,3 +11,7 @@
         <h1>Космонавт Коля оказалось что он не Коля</h1>
     </body>
 </html>
+
+git init .
+git remote add -t \* -f origin <https://github.com/icestream05/icestream.github.io>
+git checkout master
