--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
-<html lang="ru">
-    <head>
+<head>
         <title>Мой первый проект</title>
         <meta charset="utf-8">
-        <meta name="description" content="Сайт про космические приключения">
-        <meta name="keywords" content="космос, астронавт, МКС, международная космическая станция">
-        <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="/G3-2019/style/main.css">
-    </head>
-    <body>
-        <h1>Космонавт Коля оказалось что он не Коля</h1>
-    </body>
-</html>
-1
+        <meta name="description" content="">
+        <meta name="keywords" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/icestream.github.io/style/main.css">
+    <style type="text/css">
