--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
         <meta name="description" content="">
         <meta name="keywords" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/icestream.github.io/style/main.css">
+        <link rel="stylesheet" href="/icestream/style/main.css">
     <style type="text/css">
