--- a/index.html
+++ b/index.html
@@ -6,3 +6,91 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/icestream/style/main.css">
     <style type="text/css">
+        <style type="text/css">
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
+.context-menu-list {
+  font-family: 'Lato', sans-serif !important;
+  font-size: 14px;
+  text-align: left;
+  font-weight: normal;
+  width: 200px;
+}
+.context-menu-item {
+  font-weight: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  text-align: left;
+}
+.contextmenu-item-custom.contextmenu-item-custom__accent:not(:hover) {
+  background-color: #f8ffeb;
+}
+.contextmenu-item-custom.contextmenu-item-custom__success:not(:hover) {
+  background-color: #eeffcd;
+}
+</style>
+</head>
+<body>
+        <header>
+            <div class="container">
+                <div class="col-1">
+                    <img src="/icestream/images/bear.jpg">
+                </div>
+                <div class="col-3">
+                    <nav>
+                        <ul class="row">
+                            <li><a href="#">Пункт 1</a></li>
+                            <li><a href="#">Пункт 2</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-1">
+                    <a href="#">Не нажимать</a>
+                </div>
+            </div>
+        </header>
+        <main>
+            <div class="container">
+                <aside class="col-1">
+                    <nav>
+                        <ul class="column">
+                            <li><a href="#">Пункт 1</a></li>
+                            <li><a href="#">Пункт 2</a></li>
+                            <li><a href="#">Пункт 3</a></li>
+                        </ul>
+                    </nav>
+                </aside>
+                <section class="col-3">
+                    <h1>Заголовок 1</h1>
+                    <h2>Заголовок 2</h2>
+                    <h3>Заголовок 3</h3>
+                </section>
+                <aside class="col-1"></aside>
+            </div>
+        </main>
+        <footer>
+            <div class="container">
+                <div class="col-1">
+                <img src="/icestream/images/bear.jpg">
+                </div>
+                <div class="col-3">
+                    <nav class="row">
+                        <ul class="column">
+                            <li><a href="#">Пункт 1</a></li>
+                            <li><a href="#">Пункт 2</a></li>
+                        </ul>
+                        <ul class="column">
+                            <li><a href="#">Пункт 1</a></li>
+                            <li><a href="#">Пункт 2</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-1">
+                </div>
+            </div>
+        </footer>
+
+
+<div id="shimai-world" style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; z-index: 2147483647; pointer-events: none; background: transparent;"></div></body>
+
+
