--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <header>
             <div class="container">
                 <div class="col-1">
-                    <img src="/icestream/images/bear.jpg">
+                    <img src="/icestream/images/bear.png">
                 </div>
                 <div class="col-3">
                     <nav>
@@ -71,7 +71,7 @@
         <footer>
             <div class="container">
                 <div class="col-1">
-                <img src="/icestream/images/bear.jpg">
+                <img src="/icestream/images/bear.png">
                 </div>
                 <div class="col-3">
                     <nav class="row">
