--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                     <h1>Заголовок 1</h1>
                     <h2>Заголовок 2</h2>
                     <h3>Заголовок 3</h3>
+                    <h1>Заголовок 4</h1>
+                    <h2>Заголовок 5</h2>
+                    <h3>Заголовок 6</h3>
                 </section>
                 <aside class="col-1"></aside>
             </div>
