--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="col-1">
-                    <a href="#">Не нажимать</a>
-                </div>
+                <div class="button"><a href="#">Не нажимать</a></div>
             </div>
         </header>
         <main>
