--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="button"><a href="#">Не нажимать</a></div>
+                <div class="col-1">
+                    <a href="#">Не нажимать</a>
+                </div>
             </div>
         </header>
         <main>
@@ -89,6 +91,7 @@
                     </nav>
                 </div>
                 <div class="col-1">
+                        <a href="#">Кнопка</a>
                 </div>
             </div>
         </footer>
