--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                 <div class="col-3">
                     <nav class="row">
                         <ul class="column">
-                            <li><a href="#">Пункт 1</a></li>
-                            <li><a href="#">Пункт 2</a></li>
+                             <li><a href="#">Типо Инста</a></li>
+                            <li><a href="#">типо вк</a></li>
                         </ul>
                         <ul class="column">
-                            <li><a href="#">Пункт 1</a></li>
-                            <li><a href="#">Пункт 2</a></li>
+                            <li><a href="#">Типо Facebook</a></li>
+                            <li><a href="#">типо reddit</a></li>
                         </ul>
                     </nav>
                 </div>
