--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </nav>
                 </div>
                 <div class="col-1">
-                    <a href="#">Не нажимать</a>
+                    <a href="#">Не нажимать!</a>
                 </div>
             </div>
         </header>
