--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<head>
+<!DOCTYPE html>
+<html lang="ru">
+    <head>
         <title>Мой первый проект</title>
         <meta charset="utf-8">
         <meta name="description" content="">
         <meta name="keywords" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/icestream/style/main.css">
-</head>
-<body>
+        <link rel="stylesheet" href="/afanasyev_official/style/main.css">
+    </head>
+    <body>
         <header>
             <div class="container">
                 <div class="col-1">
@@ -21,7 +23,7 @@
                     </nav>
                 </div>
                 <div class="col-1">
-                    <a href="#">Не нажимать!</a>
+                    <a href="#" class="button">Не НаЖиМаТь</a>
                 </div>
             </div>
         </header>
@@ -57,22 +59,20 @@
                 <div class="col-3">
                     <nav class="row">
                         <ul class="column">
-                            <li><a href="#">Типо Инста</a></li>
-                            <li><a href="#">типо вк</a></li>
+                            <li><a href="#">Пункт 1</a></li>
+                            <li><a href="#">Пункт 2</a></li>
                         </ul>
                         <ul class="column">
-                            <li><a href="#">Типо Facebook</a></li>
-                            <li><a href="#">типо reddit</a></li>
+                            <li><a href="#">Пункт 1</a></li>
+                            <li><a href="#">Пункт 2</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="col-1">
-                        <a href="#">Кнопка</a>
                 </div>
             </div>
         </footer>
-
-
-<div id="shimai-world" style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; z-index: 2147483647; pointer-events: none; background: transparent;"></div></body>
+    </body>
+</html>
 
 
