--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <meta name="keywords" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/afanasyev_official/style/main.css">
+        <link rel="stylesheet" href="/icestream/style/main.css">
     </head>
     <body>
         <header>
