--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
                 <div class="col-3">
                     <nav class="row">
                         <ul class="column">
-                            <li><a href="#">Пункт 1</a></li>
-                            <li><a href="#">Пункт 2</a></li>
+                            <li><a href="#">YouTube</a></li>
+                            <li><a href="#">VK</a></li>
                         </ul>
                         <ul class="column">
-                            <li><a href="#">Пункт 1</a></li>
-                            <li><a href="#">Пункт 2</a></li>
+                            <li><a href="#">facebook</a></li>
+                            <li><a href="#">reddit</a></li>
                         </ul>
                     </nav>
                 </div>
