--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </nav>
                 </div>
                 <div class="col-1">
-                    <a href="#" class="button">ну предположим что кнопка</a>
+                    <a href="#" class="button">будем знакомы кнопка</a>
                 </div>
             </div>
         </header>
