--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="container">
                 <div class="col-1">
-                    <img src="/icestream/images/test_logo.png">
+                    <img src="/icestream/images/auf.png">
                 </div>
                 <div class="col-3">
                     <nav>
