--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </nav>
                 </div>
                 <div class="col-1">
-                    <a href="#" class="button">будем знакомы button</a>
+                    <a href="#" class="button">Кнопка</a>
                 </div>
             </div>
         </header>
@@ -59,12 +59,12 @@
                 <div class="col-3">
                     <nav class="row">
                         <ul class="column">
-                            <li><a href="#">YouTube</a></li>
-                            <li><a href="#">VK</a></li>
+                            <li><a href="#">Пункт 1</a></li>
+                            <li><a href="#">Пункт 2</a></li>
                         </ul>
                         <ul class="column">
-                            <li><a href="#">facebook</a></li>
-                            <li><a href="#">reddit</a></li>
+                            <li><a href="#">Пункт 1</a></li>
+                            <li><a href="#">Пункт 2</a></li>
                         </ul>
                     </nav>
                 </div>
