--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="container">
                 <div class="col-1">
-                    <img src="/icestream/images/auf.png">
+                    <img src="/icestream/images/times_logo.png">
                 </div>
                 <div class="col-3">
                     <nav>
@@ -54,7 +54,7 @@
         <footer>
             <div class="container">
                 <div class="col-1">
-                <img src="/icestream/images/bear.png">
+                <img src="/icestream/images/times_logo.png">
                 </div>
                 <div class="col-3">
                     <nav class="row">
