--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
-        <title>Мой первый проект</title>
+        <title></title>
         <meta charset="utf-8">
         <meta name="description" content="">
         <meta name="keywords" content="">
@@ -24,6 +24,9 @@
                 </div>
                 <div class="col-1">
                     <a href="#" class="button">Кнопка</a>
+                </div>
+                <div class="col-1">
+                        <a href="#"></a>
                 </div>
             </div>
         </header>
