--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         <header>
             <div class="container">
                 <div class="col-1">
-                    <img src="/icestream/images/logo_d.png">
+                    <a href="#"><img src="/GorlovT/logo.png" alt="logo" title="Логотип RMT"></a>
                 </div>
                 <div class="col-3">
                     <nav>
                         <ul class="row">
-                            <li><a href="#">Пункт 1</a></li>
-                            <li><a href="#">Пункт 2</a></li>
+                            <li><a href="#"></a>Пункт 1</li>
+                            <li><a href="#"></a>Пункт 2</li>
                         </ul>
                     </nav>
                 </div>
                 <div class="col-1">
-                    <a href="#" class="button">Кнопка</a>
+                        <a href="#" class="button">Кнопка</a>
                 </div>
                 <div class="col-1">
                         <a href="#"></a>
