--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="container">
                 <div class="col-1">
-                    <a href="#"><img src="/GorlovT/logo.png" alt="logo" title="Логотип RMT"></a>
+                    <a href="#"><img src="/icestream/logo_d.png" alt="logo" title="Логотип"></a>
                 </div>
                 <div class="col-3">
                     <nav>
