--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
-        <title>i`m your die</title>
+        <title>Сбербанк</title>
         <meta charset="utf-8">
         <meta name="description" content="">
         <meta name="keywords" content="">
